@startuml
hide empty members

package view {
    class GptUiController
    together {
        class GptUiApplication
        class HistoryController
        class QuestionController
        class ThemeController
        class AnswerController
    }
}

package viewmodel {
    class GptUiApplicationVM
    class AnswerVM
    class GptUiVM
    class HistoryVM
    class QuestionVM
    class ThemeVM
    class ViewModelMediator
}

package model{
    class StateModel
    class ClipboardModel
    class ConfigModel
    class FileModel
    class QuestionModel
    class StorageModel
}

GptUiApplication --> GptUiApplicationVM

GptUiApplicationVM --> ViewModelMediator

ThemeController ---> ThemeVM
QuestionController ---> QuestionVM
HistoryController ---> HistoryVM
AnswerController --> AnswerVM

GptUiController "1" --> "4" AnswerController: initialize
GptUiController --> AnswerVM
GptUiController --> GptUiVM

ThemeVM <--> ViewModelMediator
QuestionVM <--> ViewModelMediator
HistoryVM <--> ViewModelMediator
GptUiVM --> ViewModelMediator
AnswerVM <--> ViewModelMediator

StateModel --> StorageModel
QuestionModel --> StorageModel
QuestionModel --> ConfigModel

ViewModelMediator --> StateModel
ViewModelMediator --> QuestionModel
ViewModelMediator --> ClipboardModel
ViewModelMediator --> FileModel


@enduml